@@ -5,9 +5,11 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.concurrent.*;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 
-public class ExampleVTExecutor {
+public class ExampleWebFetch {
 
     void main(String[] args) {
         handle(Arrays.stream(args).map(s -> {
@@ -21,19 +23,21 @@ public class ExampleVTExecutor {
 
     static void handle(URL... urls) {
         Future<String>[] fs = new Future[urls.length];
-        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            for (var i = 0; i < urls.length; i = i + 1) {
-                var url = urls[i];
-                fs[i] = executor.submit(() -> fetchURL(url));
-            }
-            var sb = new StringBuilder();
-            for (var f : fs) {
-                sb.append(f.get());
+        var executor = Executors.newCachedThreadPool();
+        for (var i = 0; i < urls.length; i = i + 1) {
+            var url = urls[i];
+            fs[i] = executor.submit(() -> fetchURL(url));
+        }
+        var sb = new StringBuilder();
+        for (var f : fs) {
+                try {
+                    sb.append(f.get());
+                } catch (InterruptedException | ExecutionException e) {
+                    throw new RuntimeException(e);
+                }
             }
             System.out.println(sb);
-        } catch (ExecutionException | InterruptedException e) {
-            e.printStackTrace();
-        }
+            executor.shutdown();
     }
 
     static String fetchURL(URL url) throws IOException {
